smtp4dev-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  type: LoadBalancer
  ports:
  - port: 2525
    name: smtp
    targetPort: 25
    protocol: TCP
  - port: 8181
    name: smtp-ui
    targetPort: 80
    protocol: TCP
  selector:
    app: smtp4dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev
  labels:
    app: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - name: smtp4dev
          image: nikpap/smtp4dev:harnessonprem
          ports:
            - containerPort: 80
            - containerPort: 25
