ingress-manifest.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ng-manager
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ng-manager
              servicePort: 7090
            path: /ng/api(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:
        - <<hostname>>
      secretName: mycert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sto-core
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:   
              serviceName: sto-core
              servicePort: 4000
            path: /sto/(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:
        - <<hostname>>
      secretName: mycert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sto-manager
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: sto-manager
              servicePort: 7090
            path: /sto-manager/(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:    
        - <<hostname>>    
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: et-collector
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:              
              serviceName: et-collector
              servicePort: 6070
            path: /et-collector(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: et-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:             
              serviceName: et-service
              servicePort: 9191
            path: /et(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>    
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: next-gen-ui
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:              
              serviceName: next-gen-ui
              servicePort: 80
            path: /ng(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:    
        - <<hostname>> 
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ci-manager
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ci-manager
              servicePort: 7090
            path: /ci(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cv-nextgen
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend: 
              serviceName: cv-nextgen
              servicePort: 6060
            path: /cv(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ui
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - backend:   
              serviceName: minio
              servicePort: 9000
            path: /minio
            pathType: Prefix
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logs-service-minio
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 9000
            path: /logs/
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: log-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:    
              serviceName: log-service
              servicePort: 8079
            path: /log-service(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:           
              serviceName: gateway
              servicePort: 80
            path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: access-control
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend: 
              serviceName: access-control
              servicePort: 9006
            path: /authz(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ti-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:           
              serviceName: ti-service
              servicePort: 8078
            path: /ti-service(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: template-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:            
              serviceName: template-service
              servicePort: 15002
            path: /template(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:    
        - <<hostname>>  
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: delegate-proxy
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: delegate-proxy
              servicePort: 80
            path: /storage
            pathType: Prefix
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pipeline-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:             
              serviceName: pipeline-service
              servicePort: 12001                 
            path: /pipeline(/|$)(.*)
            pathType: ImplementationSpecific 
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notification-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:             
              serviceName: platform-service
              servicePort: 9005
            path: /notifications(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: audit-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:              
              serviceName: platform-service
              servicePort: 9005
            path: /audit(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:    
        - <<hostname>>    
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resourcegroup-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:          
              serviceName: platform-service
              servicePort: 9005
            path: /resourcegroup(/|$)(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>     
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: verification-service
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:             
              serviceName: verification-svc
              servicePort: 7070
            path: /verification
            pathType: Prefix
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harness-manager-api
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: harness-manager
              servicePort: 9090
            path: /api
            pathType: Prefix
      host: <<hostname>>
  tls:
    - hosts:     
        - <<hostname>>      
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harness-manager-stream
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - backend:             
              serviceName: harness-manager
              servicePort: 9090
            path: /stream
            pathType: Prefix
      host: <<hostname>>
  tls:
    - hosts:   
        - <<hostname>>    
      secretName: mycert


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ng-auth-ui
  namespace: harness
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:              
              serviceName: ng-auth-ui
              servicePort: 80
            path: /auth(.*)
            pathType: ImplementationSpecific
      host: <<hostname>>
  tls:
    - hosts:      
        - <<hostname>>      
      secretName: mycert
